--- a/agradecimento.html
+++ b/agradecimento.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title><h1>em construção</h1>></title>
+    <title>sim</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='comando.js'></script>
 </head>
 <body>
-    <h1>em construção</h1>
+    <h1>Kokai agradece sua preferencia!</h1>
+    <div id="grata">
+        <ul>
+            <li><a href="pagina1.html"> Voltar</a></li>
+        </ul>
+    </div>
 </body>
 </html>
