exclui o campo de cadastro, editei botões e alguns campos para o css

--- a/agradecimento.html
+++ b/agradecimento.html
@@ -3,17 +3,13 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>sim</title>
+    <title>KOKAI|Compra</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='comando.js'></script>
 </head>
 <body>
     <h1>Kokai agradece sua preferencia!</h1>
-    <div id="grata">
-        <ul>
-            <li><a href="pagina1.html"> Voltar</a></li>
-        </ul>
-    </div>
+    <a href="pagina1.html"><button>Ir para página inicial</button></a>
 </body>
 </html>
