--- a/login.html
+++ b/login.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title><h1>em construção</h1>></title>
+    <title>KOKAI| Login</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='comando.js'></script>
+    <script src="comando.js"></script>
 </head>
+
 <body>
-    <h1>em construção</h1>
+    <a href="pagina1.html"><button>Voltar</button></a>
+
+    <div id="login">
+        <form method="post" action="" class="form">
+            <h1>Entrar</h1>
+            <p>
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email">
+            </p>
+            <p>
+                <label for="subject">Senha</label>
+                <input type="password" id="subject">
+            </p>
+            <button type="button" onclick="Verifica()">Enviar</button>
+        </form>
+    </div>
+
 </body>
+
 </html>
