--- a/login.html
+++ b/login.html
@@ -9,13 +9,10 @@
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src="comando.js"></script>
 </head>
-
 <body>
-    <a href="pagina1.html"><button>Voltar</button></a>
-
     <div id="login">
         <form method="post" action="" class="form">
-            <h1>Entrar</h1>
+            <h1>Realizar Login</h1>
             <p>
                 <label for="email">E-mail:</label>
                 <input type="email" id="email" name="email">
@@ -24,10 +21,8 @@
                 <label for="subject">Senha</label>
                 <input type="password" id="subject">
             </p>
-            <button type="button" onclick="Verifica()">Enviar</button>
+            <button type="button" onclick="Verifica()">Entrar</button>
         </form>
     </div>
-
 </body>
-
 </html>
