--- a/pagina1.html
+++ b/pagina1.html
@@ -5,12 +5,14 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>KOKAI| Página Inicial</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>página inicial</h1>
-    <a href="login.html"><button>Realizar login</button></a>
+    <div id="Pagn">
+    <h1>KOKAI Restaurante de comida japonesa</h1>
     <a href="compras.html"><button>Já quero pedir!</button></a>
+    <a href="login.html"><button>Já tem uma conta? Entre aqui!</button></a>
+    </div>
 </body>
 </html>
