--- a/agradecimento.html
+++ b/agradecimento.html
@@ -9,7 +9,10 @@
     <script src='comando.js'></script>
 </head>
 <body>
-    <h1>Kokai agradece sua preferencia!</h1>
+    <div id="grata">
+    <h1>KOKAI agradece sua preferencia!</h1>
+    <h4>Valor total da sua compra: ---</h4>
     <a href="pagina1.html"><button>Ir para página inicial</button></a>
+    </div>
 </body>
 </html>
